--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator - Dark Theme</title>
-    <link rel="stylesheet" href="css/qr-styles.css">
+    <link rel="stylesheet" href="./css/qr-styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 <body>
@@ -45,6 +45,6 @@
         <div id="qrcode"></div>
     </div>
 
-    <script src="js/qr-script.js"></script>
+    <script src="./js/qr-script.js"></script>
 </body>
 </html>
