--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <div class="form-group">
                 <label for="logoUrl">Add Logo (optional):</label>
                 <input type="file" id="logoUrl" accept="image/*">
+                <p class="file-info">Max file size: 1MB. Square images work best.</p>
+                <div id="logoUrlError" class="error-message"></div>
                 <div class="logo-size-control">
                     <label for="logoSizeUrl">Logo Size (%):</label>
                     <input type="range" id="logoSizeUrl" min="5" max="30" value="15">
@@ -53,6 +55,8 @@
             <div class="form-group">
                 <label for="logoWifi">Add Logo (optional):</label>
                 <input type="file" id="logoWifi" accept="image/*">
+                <p class="file-info">Max file size: 1MB. Square images work best.</p>
+                <div id="logoWifiError" class="error-message"></div>
                 <div class="logo-size-control">
                     <label for="logoSizeWifi">Logo Size (%):</label>
                     <input type="range" id="logoSizeWifi" min="5" max="30" value="15">
