--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="container">
+        <h1 class="headline">Free QR Code Generator</h1>
+        <p class="tagline">Feel free to use as much as you want!</p>
         <div class="tabs">
             <button class="tab-button active" data-tab="url">URL QR Code</button>
             <button class="tab-button" data-tab="wifi">WiFi QR Code</button>
